[add] Add dockerfile for railway

--- a/.env.template
+++ b/.env.template
@@ -9,4 +9,5 @@ ASSISTANT_ID=...  # ID of the assistant, manually created once
 
 REDIS_HOST=...  # '127.0.0.1'
 REDIS_PORT=...  # '6379'
+REDIS_EXTERNAL_PORT=...
 REDIS_PASSWORD=...
