--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -28,9 +28,7 @@ services:
       - .env
     restart: always
     ports:
-      - 6379:6379  # "6379:6379"  #redis-server
-    expose:
-      - 6379 # 6379
+      - ${REDIS_EXTERNAL_PORT}
     volumes:
       - ./db/redis-data:/data
     deploy:
