[upd] added new functions

--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -1,18 +1,31 @@
 version: '3.8'
 
 services:
+  postgres-dev:
+      image: postgres:14-alpine
+      container_name: postgres-dev
+      restart: always
+      env_file:
+        - .env
+      environment:
+        - POSTGRES_USER=${POSTGRES_USER}
+        - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+        - POSTGRES_DB=${POSTGRES_DB}
+      ports: 
+        - ${POSTGRES_EXTERNAL_PORT}:${POSTGRES_PORT}
+      volumes:
+        - ./db/postgres-data:/var/lib/postgresql
+
   redis-dev:
-    container_name: "redis-db-dev"
-    hostname: "redis-db-dev"
+    container_name: redis-db-dev
+    hostname: redis-db-dev
     image: redis:alpine
     command: /bin/ash -c "redis-server --requirepass ${REDIS_PASSWORD}"
     env_file:
       - .env
     restart: always
     ports:
-      - 6379:6379  # "6379:6379"  #redis-server
-    expose:
-      - 6379 # 6379
+      - ${REDIS_EXTERNAL_PORT}:${REDIS_PORT} # "6379:6379"  #redis-server
     volumes:
       - ./db/redis-data:/data
     deploy:
