--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -18,6 +18,22 @@ services:
       - ${APP_PORT}:${APP_PORT}
     depends_on:
       - redis
+      - postgres
+  
+  postgres:
+      image: postgres:14-alpine
+      container_name: postgres
+      restart: always
+      env_file:
+        - .env
+      environment:
+        - POSTGRES_USER=${POSTGRES_USER}
+        - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+        - POSTGRES_DB=${POSTGRES_DB}
+      ports: 
+        - ${POSTGRES_EXTERNAL_PORT}:${POSTGRES_PORT}
+      volumes:
+        - ./db/postgres-data:/var/lib/postgresql
 
   redis:
     container_name: "redis"
