--- a/.env.template
+++ b/.env.template
@@ -2,8 +2,19 @@ TG_TOKEN=...
 
 OPENAI_API_KEY=...
 ASSISTANT_ID=...  # ID of the assistant, manually created once
+VALUE_IDENTIFIER_ASSISTANT_ID=...
 
 REDIS_HOST=...  # '127.0.0.1'
 REDIS_PORT=...  # '6379'
 REDIS_EXTERNAL_PORT=...
 REDIS_PASSWORD=...
+
+POSTGRES_USER=...
+POSTGRES_PASSWORD=...
+POSTGRES_DB=...
+POSTGRES_HOST=...
+POSTGRES_PORT=...
+POSTGRES_EXTERNAL_PORT=...
+
+
+AMPLITUDE_API_KEY=...
