--- a/.gitignore
+++ b/.gitignore
@@ -157,6 +157,8 @@ cython_debug/
 # docker-volume
 db/*
 
+# alembic
+versions/
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
